--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <h1 data-aos="fade-up">Hi I'm Torrexx</h1>
           <p data-aos="fade-up" data-aos-delay="100">Web Developer | Graphics Designer | Video Editor | Visual Artist</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#" class="btn-book-a-table">Request for Resume</a>
+            <a href="#" class="btn-book-a-table">Hire me</a>
             <!-- <a href="#book-a-table" class="btn-book-a-table">Book a Table</a> -->
             <!-- <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
           </div>
@@ -124,23 +124,29 @@
               <a href="#" class="btn-send-request"><i class="bi bi-send"></i>Send Request</a>
             </div>
           </div>
-          <div class="col-lg-7 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-7 d-flex align-items-begin" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                Hey there! I'm a junior web developer with almost two years of experience in full stack development. I officially started taking on freelance graphic design gigs in 2022 and freelance video editing projects in 2023. When I'm not coding, you'll find me working on improving my skills in video editing, graphics design and visual arts.
               </p>
+              <p class="fst-italic">
+                I've also experienced working as an part-time instructor, teaching students the basics in information technology. I was able to nurture my skilss in communication and dealing with questions and manage documents.
+              </p>
+              <br>
+              <p>Mostly, I work on these kinds of projects:</p>
               <ul>
-                <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="bi bi-check2-all"></i> Personalized banner layout designs for a variety of events, including but not limited to birthday parties and reunions.</li>
+                <li><i class="bi bi-check2-all"></i> Compelling promotional videos to enhance and spotlight various occasions and events.</li>
+                <li><i class="bi bi-check2-all"></i> Web applications tailored for thesis or capstone projects, exemplifying innovative solutions to complex problems.</li>
+                <li><i class="bi bi-check2-all"></i> Template layouts for power point presentations.</li>
+                <li><i class="bi bi-check2-all"></i> Writing manuscripts for capstone projects and research.</li>
               </ul>
+              <br>
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+                This portfolio is a showcase of my best projects so far. From web development to <span>graphic design</span>, video editing and visual arts, I've got a mix of skills to bring to the table. I'm all about collaboration and innovation, so if you've got a project in mind, let's chat and make something awesome together!
               </p>
 
-              <div class="position-relative mt-4" >
+              <div class="position-relative mt-4" hidden>
                 <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
                 <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
               </div>
