--- a/index.html
+++ b/index.html
@@ -223,28 +223,27 @@
       </div>
     </section><!-- End Why Us Section -->
 
-    <div class="row justify-content-center section-bg">
-      <div class="col-sm-6">
-        <div class="divider"></div>
-      </div>
-    </div>
+    
 
      <!-- ======= Chefs Section ======= -->
      <section id="terms-conditions" class="chefs section-bg" >
       <div class="container" data-aos="fade-up">
-
         <div class="section-header">
           <h2>Terms & Conditions</h2>
           <p>Important Reminders <span>Before Hiring</span></p>
+          <div class="row justify-content-center section-bg">
+            <div class="col-sm-6">
+              <div class="divider"></div>
+            </div>
+          </div>
         </div>
-
         <div class="row gy-4">
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="chef-member">
               <div class="member-img">
-                <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt="">
-                <div class="social">
+                <!-- <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid" alt=""> -->
+                <div class="social" hidden>
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
@@ -252,18 +251,22 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Master Chef</span>
-                <p>Velit aut quia fugit et et. Dolorum ea voluptate vel tempore tenetur ipsa quae aut. Ipsum exercitationem iure minima enim corporis et voluptate.</p>
+                <h4>Mode of Payment</h4>
+                <span>Any of the following</span>
+                <ol>
+                  <li>lo</li>
+                  <li>Item 2</li>
+                  <li>Item 3</li>
+                </ol>
               </div>
             </div>
           </div><!-- End Chefs Member -->
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="chef-member">
               <div class="member-img">
-                <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="">
-                <div class="social">
+                <!-- <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt=""> -->
+                <div class="social" hidden>
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
@@ -271,18 +274,18 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
+                <h4>Graphics Design</h4>
                 <span>Patissier</span>
                 <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
               </div>
             </div>
           </div><!-- End Chefs Member -->
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="chef-member">
               <div class="member-img">
-                <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt="">
-                <div class="social">
+                <!-- <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt=""> -->
+                <div class="social" hidden>
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
@@ -290,12 +293,14 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
+                <h4>Video Editing</h4>
                 <span>Cook</span>
                 <p>Vero omnis enim consequatur. Voluptas consectetur unde qui molestiae deserunt. Voluptates enim aut architecto porro aspernatur molestiae modi.</p>
               </div>
             </div>
           </div><!-- End Chefs Member -->
+
+          
 
         </div>
 
